[tool.poetry]
name = "catalog5"
version = "0.1.0"
description = ""
authors = ["sorochinskii <sorochinsky.alex@gmail.com>"]
license = "The Unlicense"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
reflex = "^0.6.5"
pydantic-settings = "^2.6.1"
loguru = "^0.7.2"
pydantic = "^2.9.2"
dump-env = "^1.5.0"
alembic = "^1.14.0"
asyncpg = "^0.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"